--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,11 @@
-<p>
-  header works!
-</p>
+<header>
+  <div class="content">
+   <ul>
+     <li routerLink="">Home</li>
+     <li routerLink="/movies">Movies</li>
+     <li routerLink="/tv">TV Shows</li>
+     <li routerLink="/people">People</li>
+   </ul>
+  </div>
+</header>
+ 
