--- a/src/app/popularMovies/popularMovies.component.scss
+++ b/src/app/popularMovies/popularMovies.component.scss
@@ -10,15 +10,20 @@ h1 {
   }
 
   .scroller {
-    height: 285px;
+    height: 320px;
     overflow-y: hidden;
     overflow-x: auto !important;
-    display: flex;
+    display: flex;  
     padding: 10px;
     width: 85%;
     margin: 0 auto;
     margin-top: 20px;
+    min-width: 138px;
+  }
   
+  .item-text{
+    min-height: 60px;
+  }
     .rating {
       position: absolute;
       top: 0;
@@ -32,6 +37,25 @@ h1 {
       padding-top: 5px;
     }
   
+    .rating{
+      position: relative;
+      color: white;
+      text-align: center;
+    }
+
+    .vote-average{
+      text-align: left;
+      margin: auto;
+      margin-left: 0;
+    }
+
+    #star{
+      text-align: center;
+      margin: 0;
+      margin: auto;
+      margin-right: 0;
+    }
+
     .scroll-item {
       margin-right: 10px;
       border-radius: 8px;
@@ -40,12 +64,18 @@ h1 {
       max-width: 140px;
       position: relative;
       transition: all 0.5s;
-  
-      &:hover {
-        transform: translateY(-3px) scale(1.01);
-        z-index: 9;
-      }
-  
+      text-decoration: none;
+      width: 140px;
+      height: 175px;
+      margin-left: 10px;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+    
+    .vote-average p :hover{
+      text-decoration: underline;
+    }
+    
       p {
         font-size: 14px;
         margin: 0;
@@ -58,6 +88,4 @@ h1 {
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
       }
-    }
-  }
   
