--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,9 +5,9 @@
         <h2>Welcome</h2>
         <h3>Millions of movies, TV shows and people to discover. Explore now.</h3>
       </div>
-      <header>
+      <!-- <header>
         <input #searchBox id="search" (input)="search(searchBox.value)" class="search" placeholder="Search"/>
-    </header>
+    </header> -->
     </div>
   </div>
 </div>
