--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<p>
-  home works!
-</p>
+<app-popularMovies></app-popularMovies>
+<app-popularShows></app-popularShows>
+<app-trendings></app-trendings>
