Added movie details and casts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-search></app-search>
 <app-popularMovies></app-popularMovies>
 <app-popularShows></app-popularShows>
 <app-trendings></app-trendings>
