--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -32,7 +32,9 @@
     </a>
   </ng-container>
 
-  <button class="btn btn-primary btn-next">Next page</button>
+  <button *ngIf="currentPage == 1" class="btn btn-primary btn-first" (click)="LoadNewMovies()">Next page</button>
+  <button *ngIf="currentPage != 1" class="btn btn-primary btn-previous" (click)="LoadPrevMovies()">Previous page</button>
+  <button *ngIf="currentPage != 1" class="btn btn-primary btn-next" (click)="LoadNewMovies()">Next page</button>
 
 
 </main>
