--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -225,8 +225,20 @@ header {
   margin-top: 20px;
 }
 
-.btn-next{
+.btn-first{
     margin: 20px 0px;
     padding:8px 0px;
     width: 500px;
+}
+
+.btn-next{
+    margin: 20px 0px;
+    padding:8px 0px;
+    width: 220px;
+}
+
+.btn-previous{
+    width: 220px;
+    padding:8px 0px;
+    margin: 20px 20px 20px 0px;
 }
