Added people service and component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,9 @@
   <div class="content">
    <ul>
      <li routerLink="">Home</li>
-     <li routerLink="/movies">Movies</li>
-     <li routerLink="/tv">TV Shows</li>
-     <li routerLink="/people">People</li>
+     <li [routerLink]="['/movies']" routerLinkActive="router-link-active">Movies</li>
+     <li [routerLink]="['/tv']" routerLinkActive="router-link-active">TV Shows</li>
+     <li [routerLink]="['/people']" routerLinkActive="router-link-active">People</li>
    </ul>
   </div>
 </header>
