added search bar

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,5 +1,8 @@
-<main id="main" *ngIf="movies">
+<div class="input">
+  <input #searchBox id="search" (input)="search(searchBox.value)" class="search" placeholder="Search for a movie.." />
+</div>
 
+<main id="main" *ngIf="movies">
   <ng-container *ngFor="let movie of movies.results">
     <a routerLink="/details/movie/{{movie.id}}" class="movie" on-mouseover="onMouseOver(movie)">
       <img src="https://image.tmdb.org/t/p/w1280{{movie.poster_path}}" alt="{{movie.original_title}}"
