--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -5,9 +5,15 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding-top: 40px;
+  padding-top: 30px;
   background-color: rgb(3, 37, 56);
+}
 
+.input{
+  padding-top: 30px;
+  text-align: center;
+  margin: auto;
+  background-color: rgb(3, 37, 56);
 }
 
 .movie {
@@ -123,6 +129,32 @@ main {
         padding: 0px 2px;
       }
     }
+  }
+}
+
+.search {
+  background-color: transparent;
+  border: 2px solid #d6dadf2e;
+  border-radius: 50px;
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  width: 40%;
+  transition: all 0.6s;
+
+  &:not(:first-of-type) {
+    margin-left: 10px;
+  }
+
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.7);
+  }
+
+  &:focus {
+    outline: none;
+    background-color: #03213a;
+    width: 55%;
   }
 }
 
