--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -1,3 +1,6 @@
+<div class="input">
+  <input #searchBox id="search" (input)="search(searchBox.value)" class="search" placeholder="Search for an actor" />
+</div>
 
 <main id="main" *ngIf="people">
   
