--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,5 +1,5 @@
 <div class="input">
-  <input #searchBox id="search" (input)="search(searchBox.value)" class="search" placeholder="Search for a movie.." />
+  <input #searchBox id="search" (input)="search(searchBox.value)" class="search" placeholder="Search for a movie" />
 </div>
 
 <main id="main" *ngIf="movies">
