--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -35,9 +35,10 @@
     </a>
   </ng-container>
 
-  <button *ngIf="currentPage == 1" class="btn btn-primary btn-first" (click)="LoadNewMovies()">Next page</button>
-  <button *ngIf="currentPage != 1" class="btn btn-primary btn-previous" (click)="LoadPrevMovies()">Previous page</button>
-  <button *ngIf="currentPage != 1" class="btn btn-primary btn-next" (click)="LoadNewMovies()">Next page</button>
-
+  <div class="buttons">
+    <button *ngIf="currentPage == 1" class="btn btn-primary btn-first" (click)="LoadNewMovies()">Next page</button>
+    <button *ngIf="currentPage != 1" class="btn btn-primary btn-previous" (click)="LoadPrevMovies()">Previous page</button>
+    <button *ngIf="currentPage != 1" class="btn btn-primary btn-next" (click)="LoadNewMovies()">Next page</button>
+  </div>
 
 </main>
